# cricstate

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTENANCE.md  Makefile  README.md  index.html  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  challenger_model.yml
.github/workflows/: ci.yml
artifacts/p3/: metrics.json
comms/: show-hn.md  social.md
data/: MANIFEST
docs/: ARCHITECTURE.md  BRANCH_A_REPORT.md  EVALUATING.md  EVIDENCE_M1.md  EVIDENCE_M2_LABELS.md  FAQ.md  INTERVIEW.md  LEADERBOARD.md  P3_VAL_REPORT.md  README.md  REPRODUCE.md  SPEC_M1.md  SPEC_M2.md  STATS.md
experiments/branch_a/: __init__.py  canary.py  effects.py  models.py  run.py
experiments/branch_c/: __init__.py  latent.py  models.py
paper/: index.html
report/: paper.md
report/tables/: conditions.md  identity.md  leakage.md  per_class_calibration.md  state_ladder.md
results/: summary.json
scripts/: evidence_m1.py  evidence_m2_labels.py  generate_figures.py  p3_val_report.py
src/cricstate/: __init__.py  build.py  download.py  parser.py  quarantine.py  replay.py  schemas.py  transition.py  validator.py
src/evalkit/: __init__.py  bootstrap.py  cache.py  calibrate.py  canaries.py  cli.py  datasets.py  features.py  freeze.py  labels.py  metrics.py  monotonicity.py  pava.py  policy.py  reports.py  run.py  splits.py
src/evalkit/models/: __init__.py  b0_marginal.py  b1_table.py  b2_logistic.py  b3_gbm.py  base.py
src/visualization/: __init__.py  figures.py  plots.py  tables.py
tests/: test_bootstrap.py  test_branch_a_canary.py  test_branch_a_effects.py  test_branch_a_models.py  test_branch_c_latent.py  test_branch_c_models.py  test_cache.py  test_calibrate.py  test_corpus.py  test_corpus_evalkit.py  test_features.py  test_freeze.py  test_invariants.py  test_labels.py  test_metrics.py  test_models.py  test_parser.py  test_pava.py  test_replay_goldens.py  test_reports.py  test_schemas.py  test_smoke.py  test_splits.py  test_transition.py
tests/golden/: 1187669.json  1197049.json  1283034.json  1298152.json  1322004.json  1334913.json  1409478.json  1499666.json  1534732.json  804685.json  GOLDENS.md
tests/golden_schemas/: deliveries.json  matches.json  players.json
