[project]
name = "cricstate"
version = "0.1.0"
description = "Module 1: canonical cricket game-state representation + deterministic reconstruction from Cricsheet ball-by-ball data"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "polars>=1.0",
    "pyarrow>=17.0",
    # M2 stack additions (SPEC_M2): nothing else without stopping to ask
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "matplotlib>=3.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cricstate", "src/evalkit"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "UP",               # pyupgrade
    "B",                # bugbear
    "BLE",              # blind-except — enforces "no silent exception handling"
    "S110", "S112",     # try-except-pass / try-except-continue
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]
warn_unreachable = true

[[tool.mypy.overrides]]
# pyarrow/sklearn/scipy/matplotlib ship no (complete) type stubs
module = ["pyarrow.*", "sklearn.*", "scipy.*", "matplotlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cricstate.build"
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# src on pythonpath directly: uv's editable .pth install is unreliable on
# macOS (UF_HIDDEN files are skipped by CPython 3.12 site processing).
pythonpath = ["src"]
addopts = "-q --strict-markers"
markers = [
    "corpus: tests that require the full downloaded Cricsheet snapshot",
]
